fix security page on firefox

--- a/css/launchcircle.css
+++ b/css/launchcircle.css
@@ -1127,17 +1127,18 @@ a.link-icon::after {
     font-size: 1.4em;
     text-align: center;
 }
+/*Responsive + Firefox Fix*/
+@media screen and (max-width: 1000px), all and (-moz-images-in-menus:0) and (min-resolution: .001dpcm) {
 
-@media screen and (max-width: 1000px) {
     .radial-services .title {
         font-size: 1.3em;
     }
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 768px), all and (-moz-images-in-menus:0) and (min-resolution: .001dpcm) and (max-width: 768px) {
         .radial-services .title {
             font-size: 1em;
         }
     }
-    @media screen and (max-width: 575px) {
+    @media screen and (max-width: 575px), all and (-moz-images-in-menus:0) and (min-resolution: .001dpcm) {
         .security .list-view .point-wrapper .point {
             position: relative;
             margin: 1em 0;
